src/main.css
/* ... */
.fleeca .screen {
    background: radial-gradient(#8ce99a, #2b8a3e);
}

/*------------------------------------*\
  APP
\*------------------------------------*/
@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

.app {
    box-sizing: border-box;
    display: flex;
    width: 1224px;
    height: 720px;
    margin: auto;
    background-color: var(--color-bg);
    border: 1px solid var(--color-border-on-bg);
    overflow: hidden;
}

.app__spinner {
    display: none;
    box-sizing: border-box;
    width: 72px;
    height: 72px;
    border-radius: 9999px;
    border: 8px solid var(--color-toggle-button-track);
    animation: spin 2s linear infinite;
    margin: auto;
}

.app__container {
    box-sizing: border-box;
    display: none;
    width: 100%;
    height: 100%;
}

.app__tab-selector {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border-width: 0;
}

.maze .app__spinner {
    border-top: 8px solid var(--color-maze);
}

.fleeca .app__spinner {
    border-top: 8px solid var(--color-fleeca);
}

/*------------------------------------*\
  BAR
\*------------------------------------*/
.bar {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 72px;
    padding-left: 24px;
    padding-right: 24px;
    background-color: var(--color-fg);
    border-bottom: 1px solid var(--color-border);
}

.bar__section {
    box-sizing: border-box;
    flex: 1 1 0;
}

.bar__section--middle {
    height: 100%;
}

.bar__section--right {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: flex-start;
}

.bar__section--row {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
}

.bar__logo {
    box-sizing: border-box;
    display: block;
    width: 36px;
    height: auto;
    margin-right: 16px;
    pointer-events: none;
}

.maze .bar__logo {
    color: var(--color-maze);
}

.fleeca .bar__logo {
    color: var(--color-fleeca);
}

.maze .bar__logo--fleeca {
    display: none;
}

.fleeca .bar__logo--maze {
    display: none;
}

/*------------------------------------*\
  BALANCE
\*------------------------------------*/
.balance {
    box-sizing: border-box;
    width: auto;
    height: auto;
}

.balance__name {
    font-size: 10px;
    font-weight: 700;
    letter-spacing: 0.4px;
    color: var(--color-text);
    text-transform: uppercase;
    line-height: 10px;
    margin: 0 0 4px 0;
}

.balance__value {
    display: inline;
    font-size: 24px;
    font-weight: 700;
    letter-spacing: 0.8px;
    color: transparent;
    text-shadow: 0 0 12px var(--color-up);
    text-transform: uppercase;
    line-height: 24px;
    margin: 0;
    cursor: default;
}

.balance__value:hover {
    color: var(--color-up);
    text-shadow: none;
}

.balance__value--negative {
    text-shadow: 0 0 12px var(--color-down);
}

.balance__value--negative:hover {
    color: var(--color-down);
    text-shadow: none;
}

/*------------------------------------*\
  TAB LIST
\*------------------------------------*/
.tab-list {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    width: auto;
    height: 100%;
}

.tab-list__item {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 124px;
    height: 100%;
    border-top: 4px solid transparent;
    border-bottom: 4px solid transparent;
    cursor: pointer;
}

.tab-list__item--hidden {
    display: none;
}

.tab-list__label {
    font-size: 12px;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 0.6px;
    color: var(--color-text-alt);
}

/*------------------------------------*\
  TOGGLE BUTTON
\*------------------------------------*/
.toggle-button {
    box-sizing: border-box;
    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    width: auto;
    height: auto;
    padding-top: 16px;
    padding-bottom: 16px;
}

.toggle-button__input {
    box-sizing: border-box;
    display: block;
    position: absolute;
    z-index: 20;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    -webkit-appearance: none;
    appearance: none;
    cursor: pointer;
}

.toggle-button__input:focus {
    outline: none;
}

.toggle-button__icon {
    box-sizing: border-box;
    width: 16px;
    height: auto;
}

.toggle-button__icon--sun {
    color: var(--color-toggle-button-icon-active);
}

.toggle-button__icon--moon {
    color: var(--color-toggle-button-icon);
}

.dark .toggle-button__icon--sun {
    color: var(--color-toggle-button-icon);
}

.dark .toggle-button__icon--moon {
    color: var(--color-toggle-button-icon-active);
}

.toggle-button__track {
    box-sizing: border-box;
    width: 40px;
    height: 20px;
    padding: 4px;
    margin-left: 12px;
    margin-right: 12px;
    border-radius: 9999px;
    background-color: var(--color-toggle-button-track);
}

.toggle-button__input:focus ~ .toggle-button__track {
    background-color: var(--color-toggle-button-track-focus);
}

.toggle-button__handle {
    box-sizing: border-box;
    position: relative;
    z-index: 10;
    width: 12px;
    height: 12px;
    border-radius: 9999px;
}

.maze .toggle-button__handle {
    background-color: var(--color-maze);
}

.fleeca .toggle-button__handle {
    background-color: var(--color-fleeca);
}

.toggle-button__input:checked ~ .toggle-button__track > .toggle-button__handle {
    transform: translateX(20px);
}

/*------------------------------------*\
  VIEW
\*------------------------------------*/
.view {
    box-sizing: border-box;
    display: none;
    width: 100%;
    height: calc(100% - 72px);
    padding: 24px;
}
/* ... */

